// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entra-app-registration - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Guides Microsoft Entra ID app registration, OAuth 2.0 authentication, and MSAL integration. WHEN: create app registration, register Azure AD app, configure OAuth, set up authentication, add API permissions, generate service principal, MSAL example, console app auth, Entra ID setup, Azure AD authentication.",
  "extractedKeywords": [
    "app",
    "auth",
    "authentication",
    "azure",
    "bicep",
    "cli",
    "configure",
    "console",
    "create",
    "entra",
    "example",
    "generate",
    "guides",
    "identity",
    "integration",
    "key vault",
    "keyvault",
    "mcp",
    "microsoft",
    "monitor",
    "msal",
    "oauth",
    "permissions",
    "principal",
    "register",
    "registration",
    "security",
    "service",
    "setup",
    "when",
  ],
  "name": "entra-app-registration",
}
`;

exports[`entra-app-registration - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app",
  "auth",
  "authentication",
  "azure",
  "bicep",
  "cli",
  "configure",
  "console",
  "create",
  "entra",
  "example",
  "generate",
  "guides",
  "identity",
  "integration",
  "key vault",
  "keyvault",
  "mcp",
  "microsoft",
  "monitor",
  "msal",
  "oauth",
  "permissions",
  "principal",
  "register",
  "registration",
  "security",
  "service",
  "setup",
  "when",
]
`;
